<resources>
    <string name="app_name">Locate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map">Map</string>
    <string name="menu_home">Home</string>
    <string name="menu_send_position">Send Position</string>
    <string name="menu_emergency_list">Emergency List</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_search_ble_devices">Search</string>
    <string name="menu_control_ble_devices">Device</string>
    <string name="menu_send">Send</string>
    <string name="button_view">VIEW</string>
    <string name="button_send">SEND</string>
    <string name="menu_account">Account</string>
    <string name="et_longitude">Longitude</string>
    <string name="et_latitude">Latitude</string>

    <string-array name="priority">
        <item>Primary</item>
        <item>Urgent</item>
        <item>Discrete</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Compatable:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string name="emerencyNotification">C\'è un emergenza</string>
    <string name="home_start_monitoring">Connect to your BLE device</string>
    <string name="home_stop_monitoring">Disconnect</string>
    <string name="refuse_emergency">Decline</string>
    <string name="accept_emergency">Accept</string>
    <string name="error_priority">You must select priority</string>
    <string name="error_connect">First connect with your ble device</string>
    <string name="connecting">Connecting...</string>
    <string name="send_position">Send</string>
    <string name="devices_not_found">No devices found</string>
    <string name="not_send_error">Message not send, try to reconnect to BLE device</string>
    <string name="accept">Emergency Accepted</string>
    <string name="new_emergency">New emergency</string>
    <string name="ack_received">Someone is coming for help you !!</string>

    <string name="tutorial_reply_notifications">Rispondi alle notifiche</string>
    <string name="tutorial_my_activities">Inserisci le attività che svolgi regolarmente</string>
    <string name="tutorial_my_activities_corpus">Nella sezione \"Le Mie Attività\" potrai inserire le attività che svolgi regolarmente, come andare in palestra, studiare o lavorare</string>
    <string name="tutorial_end">Fine</string>
    <string name="tutorial_turn_on_gps">Attiva il GPS</string>
    <string name="tutorial_turn_on_gps_corpus">Attiva il gps per iniziare il monitoraggio automatico delle tue attività</string>
    <string name="tutorial_check_timeline">Controlla la Timeline</string>
    <string name="tutorial_check_timeline_corpus">La Timeline ti permette di terner traccia delle attività che hai svolto nel corso di ogni singola giornata!</string>

</resources>
