<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="bottom_navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bottom_nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/bottom_nav_send_position"
            android:icon="@drawable/ic_menu_send"
            android:iconTint="@color/colorPrimary"
            android:title="@string/menu_send_position" />
        <item
            android:id="@+id/bottom_nav_emergency"
            android:icon="@drawable/ic_menu_emergency_list"
            android:title="@string/menu_emergency_list" />
        <item
            android:id="@+id/bottom_nav_map"
            android:icon="@drawable/round_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/bottom_nav_account"
            android:icon="@drawable/icon_account"
            android:title="@string/menu_account" />
    </group>
</menu>