<?xml version="1.0" encoding="utf-8"?><navigation xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/bottom_navigation"    app:startDestination="@+id/nav_home">    <fragment        android:id="@+id/nav_home"        android:name="com.example.locate.ui.home.HomeFragment"        android:label="@string/menu_home"        tools:layout="@layout/fragment_home">        <action            android:id="@+id/home_to_send_position"            app:destination="@id/nav_send_position"            app:enterAnim="@anim/nav_default_enter_anim"            app:exitAnim="@anim/nav_default_exit_anim"            app:popEnterAnim="@anim/nav_default_pop_enter_anim"            app:popExitAnim="@anim/nav_default_pop_exit_anim"            app:popUpTo="@+id/nav_home" />        <action            android:id="@+id/home_to_map"            app:destination="@id/nav_map"            app:enterAnim="@anim/nav_default_enter_anim"            app:exitAnim="@anim/nav_default_exit_anim"            app:popEnterAnim="@anim/nav_default_pop_enter_anim"            app:popExitAnim="@anim/nav_default_pop_exit_anim"            app:popUpTo="@+id/nav_home" />        <action            android:id="@+id/action_nav_home_to_nav_emergency"            app:destination="@id/nav_emergency" />        <action            android:id="@+id/action_nav_home_to_nav_account"            app:destination="@id/nav_account" />    </fragment>    <fragment        android:id="@+id/nav_send_position"        android:name="com.example.locate.ui.send_position.SendPositionFragment"        android:label="@string/menu_send_position"        tools:layout="@layout/fragment_send_position" />    <fragment        android:id="@+id/nav_emergency"        android:name="com.example.locate.ui.emergency.EmergencyFragment"        android:label="@string/menu_emergency_list"        tools:layout="@layout/fragment_emergency" />    <fragment        android:id="@+id/nav_map"        android:name="com.example.locate.ui.map.MapFragment"        android:label="@string/menu_tools"        tools:layout="@layout/fragment_map" />    <fragment        android:id="@+id/nav_send"        android:name="com.example.locate.ui.account.AccountFragment"        android:label="@string/menu_send"        tools:layout="@layout/fragment_send" />    <fragment        android:id="@+id/nav_account"        android:name="com.example.locate.ui.account.AccountFragment"        android:label="@string/menu_account"        tools:layout="@layout/fragment_account" /></navigation>