<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.locate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_send_position"
            app:destination="@id/nav_send_position"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home" />
        <action
            android:id="@+id/home_to_map"
            app:destination="@+id/nav_map"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home" />


    </fragment>

    <fragment
        android:id="@+id/nav_send_position"
        android:name="com.example.locate.ui.send_position.SendPositionFragment"
        android:label="@string/menu_send_position"
        tools:layout="@layout/fragment_send_position">
        <action
            android:id="@+id/action_nav_send_position_to_nav_search_ble_devices"
            app:destination="@id/nav_search_ble_devices"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_emergency"
        android:name="com.example.locate.ui.emergency.EmergencyFragment"
        android:label="@string/menu_emergency_list"
        tools:layout="@layout/fragment_emergency">
        <action
            android:id="@+id/action_nav_emergency_to_nav_map"
            app:destination="@id/nav_map"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_emergency" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.locate.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_search_ble_devices"
        android:name="com.example.locate.ui.searchBleDevices.SearchBleDevicesFragment"
        android:label="@string/menu_search_ble_devices"
        tools:layout="@layout/fragment_search_ble_devices">
        <action
            android:id="@+id/action_nav_search_ble_devices_to_nav_control_ble_devices"
            app:destination="@id/nav_control_ble_devices"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_control_ble_devices"
        android:name="com.example.locate.ui.ControlBleDevices.ControlBleDevicesFragment"
        android:label="@string/menu_control_ble_devices"
        tools:layout="@layout/fragment_search_ble_devices">
        <action
            android:id="@+id/action_nav_control_ble_devices_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.locate.ui.account.AccountFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.locate.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <action
        android:id="@+id/action_global_nav_account"
        app:destination="@id/nav_send"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popUpTo="@id/nav_home"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpToInclusive="true"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_nav_send_position"
        app:destination="@id/nav_send_position"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popUpTo="@id/nav_home"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpToInclusive="true"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_nav_map"
        app:destination="@id/nav_map"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popUpTo="@id/nav_home"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpToInclusive="true"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_nav_emergency"
        app:destination="@id/nav_emergency"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popUpTo="@id/nav_home"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpToInclusive="true"
        app:launchSingleTop="true" />
    <action
        android:id="@+id/action_global_nav_home"
        app:destination="@id/nav_home"
        app:popUpTo="@id/nav_home"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpToInclusive="true"
        app:launchSingleTop="true" />
</navigation>